# pm

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
agents/: implementer.md  main.md  researcher.md  reviewer.md
baseline/: pm-baseline.md
skills/messaging/: SKILL.md
skills/pm/: SKILL.md
skills/pm-workflow/: SKILL.md
src/: cli.rs  dispatch.rs  error.rs  fs_utils.rs  gh.rs  git.rs  hooks.rs  lib.rs  main.rs  messages.rs  notice.rs  path_utils.rs  testing.rs  tmux.rs
src/commands/: agent_check.rs  agent_delete.rs  agent_fork.rs  agent_list.rs  agent_next.rs  agent_read.rs  agent_restart.rs  agent_send.rs  agent_spawn.rs  agent_stop.rs  agent_wait.rs  claude_export.rs  claude_import.rs  claude_migrate.rs  claude_settings.rs  close.rs  delete.rs  docs.rs  doctor.rs  feat_adopt.rs  feat_common.rs  feat_delete.rs  feat_info.rs  feat_list.rs  feat_merge.rs  feat_new.rs  feat_pr.rs  feat_pr_edit.rs  feat_ready.rs  feat_rename.rs  feat_review.rs  feat_switch.rs  feat_sync.rs  hooks_install.rs  hooks_session_start.rs  hooks_stop.rs  init.rs  list.rs  mod.rs  msg_list.rs  (+13 more)
src/git/: branch.rs  init.rs  mod.rs  remote.rs  status.rs  worktree.rs
src/messages/: cursor.rs  mod.rs  types.rs  validation.rs
src/state/: agent.rs  feature.rs  mod.rs  paths.rs  project.rs  workflow.rs
tests/: cli.rs
workflows/implement-and-review/: config.toml  workflow.md
workflows/pr-review/: config.toml  workflow.md
workflows/research-implement-review/: config.toml  workflow.md
workflows/research-only/: config.toml  workflow.md
workflows/solo/: config.toml  workflow.md
