[package]
name = "pm"
version = "0.1.0"
edition = "2024"
description = "Terminal-based project manager built around tmux and git worktrees"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.0"
chrono = { version = "0.4.44", features = ["serde"] }
thiserror = "2.0.18"
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3.27.0"
assert_cmd = "2.2.0"
predicates = "3.1.4"
